fix: z-index

--- a/src/styles/core/settings/_z-index.scss
+++ b/src/styles/core/settings/_z-index.scss
@@ -3,7 +3,12 @@
 \*------------------------------------*/
 
 $_z-indexes: (
-  absolute,
-  sticky,
-  modal
+  background: (),
+  content: (),
+  popover: (),
+  tooltip: (),
+  nav: (),
+  overlay: (),
+  modal: (),
+  fab: (),
 );
